--- a/PatientApp/PatientApp/Settings/ar.lproj/Settings.strings
+++ b/PatientApp/PatientApp/Settings/ar.lproj/Settings.strings
@@ -1,9 +1,12 @@
 
 /* Class = "UILabel"; text = "Daily Remainders"; ObjectID = "0SO-vB-ixT"; */
-"0SO-vB-ixT.text" = "Daily Remainders";
+"0SO-vB-ixT.text" = "تذكير";
+
+/* Class = "UILabel"; text = "Language"; ObjectID = "14h-CR-fWT"; */
+"14h-CR-fWT.text" = "لغة (Language)";
 
 /* Class = "UITextField"; placeholder = "State"; ObjectID = "1Fw-Ip-jQy"; */
-"1Fw-Ip-jQy.placeholder" = "State";
+"1Fw-Ip-jQy.placeholder" = "مقاطعة";
 
 /* Class = "UILabel"; text = "---"; ObjectID = "1wq-zJ-7BO"; */
 "1wq-zJ-7BO.text" = "---";
@@ -12,34 +15,34 @@
 "2XC-Az-sjD.headerTitle" = " ";
 
 /* Class = "UILabel"; text = "Date of Birth"; ObjectID = "43L-8b-sCS"; */
-"43L-8b-sCS.text" = "Date of Birth";
+"43L-8b-sCS.text" = "تاريخ الميلاد";
 
 /* Class = "UILabel"; text = "Units of Measure"; ObjectID = "5Eo-HK-am2"; */
-"5Eo-HK-am2.text" = "Units of Measure";
+"5Eo-HK-am2.text" = "وحدات القياس";
 
 /* Class = "UINavigationItem"; title = "Relationship"; ObjectID = "6P3-By-jcu"; */
-"6P3-By-jcu.title" = "Relationship";
+"6P3-By-jcu.title" = "علاقة";
 
 /* Class = "UILabel"; text = "---"; ObjectID = "7HH-Re-gex"; */
 "7HH-Re-gex.text" = "---";
 
 /* Class = "UILabel"; text = "Title"; ObjectID = "8M6-yh-W6Z"; */
-"8M6-yh-W6Z.text" = "Title";
+"8M6-yh-W6Z.text" = "لقب";
 
-/* Class = "UILabel"; text = "Patient"; ObjectID = "9Gx-f4-g30"; */
+/* Class = "UILabel"; text = "المريض"; ObjectID = "9Gx-f4-g30"; */
 "9Gx-f4-g30.text" = "المريض";
 
 /* Class = "UILabel"; text = "Work"; ObjectID = "9aE-Nt-ma6"; */
-"9aE-Nt-ma6.text" = "Work";
+"9aE-Nt-ma6.text" = "عمل";
 
 /* Class = "UILabel"; text = "---"; ObjectID = "BNc-f4-NmO"; */
 "BNc-f4-NmO.text" = "---";
 
 /* Class = "UILabel"; text = "Height"; ObjectID = "BO7-9Z-UFu"; */
-"BO7-9Z-UFu.text" = "Height";
+"BO7-9Z-UFu.text" = "ارتفاع";
 
 /* Class = "UITextField"; placeholder = "First Name"; ObjectID = "C2f-bc-H1e"; */
-"C2f-bc-H1e.placeholder" = "First Name";
+"C2f-bc-H1e.placeholder" = "الاسم الأول";
 
 /* Class = "UISegmentedControl"; Cnm-JB-Gc9.segmentTitles[0] = "A"; ObjectID = "Cnm-JB-Gc9"; */
 "Cnm-JB-Gc9.segmentTitles[0]" = "A";
@@ -53,35 +56,35 @@
 /* Class = "UISegmentedControl"; Cnm-JB-Gc9.segmentTitles[3] = "0"; ObjectID = "Cnm-JB-Gc9"; */
 "Cnm-JB-Gc9.segmentTitles[3]" = "0";
 
-/* Class = "UILabel"; text = "Hospitals"; ObjectID = "E4Q-U9-NIN"; */
+/* Class = "UILabel"; text = "المستشفيات"; ObjectID = "E4Q-U9-NIN"; */
 "E4Q-U9-NIN.text" = "المستشفيات";
 
 /* Class = "UILabel"; text = "Title"; ObjectID = "EfO-wg-3JG"; */
-"EfO-wg-3JG.text" = "Title";
+"EfO-wg-3JG.text" = "لقب";
 
 /* Class = "UITextField"; placeholder = "Home phone number"; ObjectID = "FF3-zR-ldc"; */
-"FF3-zR-ldc.placeholder" = "Home phone number";
+"FF3-zR-ldc.placeholder" = "رقم هاتف المنزل";
 
 /* Class = "UILabel"; text = "Zip Code"; ObjectID = "FLn-IH-SxE"; */
-"FLn-IH-SxE.text" = "Zip Code";
+"FLn-IH-SxE.text" = "الرمز البريدي";
 
 /* Class = "UINavigationItem"; title = "Contact List"; ObjectID = "Ffg-fm-Kkk"; */
-"Ffg-fm-Kkk.title" = "Contact List";
+"Ffg-fm-Kkk.title" = "اتصالات";
 
 /* Class = "UISegmentedControl"; GRf-3e-dZg.segmentTitles[0] = "Yes"; ObjectID = "GRf-3e-dZg"; */
-"GRf-3e-dZg.segmentTitles[0]" = "Yes";
+"GRf-3e-dZg.segmentTitles[0]" = "نعم";
 
 /* Class = "UISegmentedControl"; GRf-3e-dZg.segmentTitles[1] = "No"; ObjectID = "GRf-3e-dZg"; */
-"GRf-3e-dZg.segmentTitles[1]" = "No";
+"GRf-3e-dZg.segmentTitles[1]" = "لا";
 
 /* Class = "UISegmentedControl"; GRf-3e-dZg.segmentTitles[2] = "---"; ObjectID = "GRf-3e-dZg"; */
 "GRf-3e-dZg.segmentTitles[2]" = "---";
 
 /* Class = "UILabel"; text = "Your Full Name"; ObjectID = "GxL-Yh-0nT"; */
-"GxL-Yh-0nT.text" = "Your Full Name";
+"GxL-Yh-0nT.text" = "اسمك";
 
 /* Class = "UILabel"; text = "Organ Donor"; ObjectID = "IX7-SN-x0i"; */
-"IX7-SN-x0i.text" = "Organ Donor";
+"IX7-SN-x0i.text" = "الهيئة المانحة";
 
 /* Class = "UITableViewSection"; headerTitle = " "; ObjectID = "In9-6V-jgs"; */
 "In9-6V-jgs.headerTitle" = " ";
@@ -90,34 +93,34 @@
 "KvI-Kq-lNK.headerTitle" = " ";
 
 /* Class = "UITextField"; placeholder = "Zip Code"; ObjectID = "MU0-uN-lNo"; */
-"MU0-uN-lNo.placeholder" = "Zip Code";
+"MU0-uN-lNo.placeholder" = "الرمز البريدي";
 
-/* Class = "UINavigationItem"; title = "Settings"; ObjectID = "PFQ-Sy-OR3"; */
+/* Class = "UINavigationItem"; title = "الإعدادات"; ObjectID = "PFQ-Sy-OR3"; */
 "PFQ-Sy-OR3.title" = "الإعدادات";
 
 /* Class = "UILabel"; text = "Gender"; ObjectID = "Q6N-nQ-Q52"; */
-"Q6N-nQ-Q52.text" = "Gender";
+"Q6N-nQ-Q52.text" = "جنس";
 
 /* Class = "UILabel"; text = "---"; ObjectID = "SVV-qO-FXw"; */
 "SVV-qO-FXw.text" = "---";
 
 /* Class = "UITextField"; placeholder = "Last Name"; ObjectID = "SfQ-Is-YuT"; */
-"SfQ-Is-YuT.placeholder" = "Last Name";
+"SfQ-Is-YuT.placeholder" = "اسم العائلة";
 
-/* Class = "UILabel"; text = "Communication"; ObjectID = "Sg6-Z6-yok"; */
+/* Class = "UILabel"; text = "اتصالات"; ObjectID = "Sg6-Z6-yok"; */
 "Sg6-Z6-yok.text" = "اتصالات";
 
 /* Class = "UITextField"; placeholder = "email address"; ObjectID = "UKZ-C2-HkH"; */
-"UKZ-C2-HkH.placeholder" = "email address";
+"UKZ-C2-HkH.placeholder" = "عنوان البريد الإلكتروني";
 
 /* Class = "UITextField"; placeholder = "Last Name"; ObjectID = "UbH-RB-lKR"; */
-"UbH-RB-lKR.placeholder" = "Last Name";
+"UbH-RB-lKR.placeholder" = "اسم العائلة";
 
 /* Class = "UILabel"; text = "City"; ObjectID = "UnC-q5-b6m"; */
-"UnC-q5-b6m.text" = "City";
+"UnC-q5-b6m.text" = "مدينة";
 
 /* Class = "UITextField"; placeholder = "Relationship"; ObjectID = "WuA-vy-f4E"; */
-"WuA-vy-f4E.placeholder" = "Relationship";
+"WuA-vy-f4E.placeholder" = "علاقة";
 
 /* Class = "UILabel"; text = "Mobilinic"; ObjectID = "XT5-ph-OyH"; */
 "XT5-ph-OyH.text" = "Mobilinic";
@@ -126,58 +129,58 @@
 "XnD-QP-dew.text" = "---";
 
 /* Class = "UILabel"; text = "Cell"; ObjectID = "Y25-Zv-hOX"; */
-"Y25-Zv-hOX.text" = "Cell";
+"Y25-Zv-hOX.text" = "متحرك";
 
 /* Class = "UILabel"; text = "State"; ObjectID = "YSK-in-dZ9"; */
-"YSK-in-dZ9.text" = "State";
+"YSK-in-dZ9.text" = "مقاطعة";
 
 /* Class = "UILabel"; text = "---"; ObjectID = "Yff-Cw-Nod"; */
 "Yff-Cw-Nod.text" = "---";
 
 /* Class = "UITextField"; placeholder = "First Name"; ObjectID = "Z0S-79-Lq9"; */
-"Z0S-79-Lq9.placeholder" = "First Name";
+"Z0S-79-Lq9.placeholder" = "الاسم الأول";
 
 /* Class = "UINavigationItem"; title = "Priority"; ObjectID = "ZnS-aZ-4qN"; */
-"ZnS-aZ-4qN.title" = "Priority";
+"ZnS-aZ-4qN.title" = "أفضلية";
 
 /* Class = "UITextField"; placeholder = "City"; ObjectID = "ab8-ra-Gv8"; */
-"ab8-ra-Gv8.placeholder" = "City";
+"ab8-ra-Gv8.placeholder" = "مدينة";
 
 /* Class = "UILabel"; text = "Email"; ObjectID = "d5K-ca-26q"; */
-"d5K-ca-26q.text" = "Email";
+"d5K-ca-26q.text" = "البريد الإلكتروني";
 
 /* Class = "UISegmentedControl"; d5b-ho-r7Z.segmentTitles[0] = "Male"; ObjectID = "d5b-ho-r7Z"; */
-"d5b-ho-r7Z.segmentTitles[0]" = "Male";
+"d5b-ho-r7Z.segmentTitles[0]" = "ذكر";
 
 /* Class = "UISegmentedControl"; d5b-ho-r7Z.segmentTitles[1] = "Female"; ObjectID = "d5b-ho-r7Z"; */
-"d5b-ho-r7Z.segmentTitles[1]" = "Female";
+"d5b-ho-r7Z.segmentTitles[1]" = "أنثى";
 
 /* Class = "UILabel"; text = "Contact Name"; ObjectID = "dLX-vU-CeI"; */
-"dLX-vU-CeI.text" = "Contact Name";
+"dLX-vU-CeI.text" = "اسم جهة الاتصال";
 
 /* Class = "UILabel"; text = "Blood Type"; ObjectID = "f32-Oh-bXF"; */
-"f32-Oh-bXF.text" = "Blood Type";
+"f32-Oh-bXF.text" = "فصيلة الدم";
 
 /* Class = "UITextField"; placeholder = "Work phone number"; ObjectID = "gi7-gP-od5"; */
-"gi7-gP-od5.placeholder" = "Work phone number";
+"gi7-gP-od5.placeholder" = "رقم هاتف العمل";
 
 /* Class = "UINavigationItem"; title = "Details"; ObjectID = "hWe-CW-j1d"; */
-"hWe-CW-j1d.title" = "Details";
+"hWe-CW-j1d.title" = "تفاصيل";
 
 /* Class = "UITextField"; placeholder = "Priority"; ObjectID = "hff-rW-XaA"; */
-"hff-rW-XaA.placeholder" = "Priority";
+"hff-rW-XaA.placeholder" = "أفضلية";
 
 /* Class = "UILabel"; text = "Weight"; ObjectID = "iSl-LG-XaN"; */
-"iSl-LG-XaN.text" = "Weight";
+"iSl-LG-XaN.text" = "الوزن";
 
-/* Class = "UILabel"; text = "Contacts"; ObjectID = "lNu-LA-Ua0"; */
+/* Class = "UILabel"; text = "اتصالات"; ObjectID = "lNu-LA-Ua0"; */
 "lNu-LA-Ua0.text" = "اتصالات";
 
 /* Class = "UITextField"; placeholder = "Street address"; ObjectID = "ldY-s6-Jvv"; */
-"ldY-s6-Jvv.placeholder" = "Street address";
+"ldY-s6-Jvv.placeholder" = "عنوان";
 
 /* Class = "UILabel"; text = "Address"; ObjectID = "m70-Hm-6hF"; */
-"m70-Hm-6hF.text" = "Address";
+"m70-Hm-6hF.text" = "عنوان";
 
 /* Class = "UISegmentedControl"; nt8-fN-lgy.segmentTitles[0] = "cm"; ObjectID = "nt8-fN-lgy"; */
 "nt8-fN-lgy.segmentTitles[0]" = "cm";
@@ -192,19 +195,19 @@
 "nyr-JQ-reB.segmentTitles[1]" = "-";
 
 /* Class = "UITextField"; placeholder = "Unit #"; ObjectID = "qO6-Jq-O1I"; */
-"qO6-Jq-O1I.placeholder" = "Unit #";
+"qO6-Jq-O1I.placeholder" = "# وحدة";
 
 /* Class = "UILabel"; text = "Other Devices"; ObjectID = "v0r-9w-DIN"; */
-"v0r-9w-DIN.text" = "Other Devices";
+"v0r-9w-DIN.text" = "الأجهزة الأخرى";
 
 /* Class = "UILabel"; text = "Apple Health"; ObjectID = "xIx-vY-92t"; */
 "xIx-vY-92t.text" = "Apple Health";
 
 /* Class = "UILabel"; text = "Home"; ObjectID = "zYR-k9-WF8"; */
-"zYR-k9-WF8.text" = "Home";
+"zYR-k9-WF8.text" = "منزل";
 
 /* Class = "UITextField"; placeholder = "Cell phone number"; ObjectID = "zdo-GG-jyF"; */
-"zdo-GG-jyF.placeholder" = "Cell phone number";
+"zdo-GG-jyF.placeholder" = "رقم الهاتف المحمول";
 
-/* Class = "UILabel"; text = "Addresses"; ObjectID = "zgq-Rj-lcV"; */
+/* Class = "UILabel"; text = "عناوين"; ObjectID = "zgq-Rj-lcV"; */
 "zgq-Rj-lcV.text" = "عناوين";
